Adicionada pagina de loadscreen

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -417,30 +417,43 @@ h6 {
   inset: 0;
   z-index: 999999;
   overflow: hidden;
-  background: var(--background-color);
-  transition: all 0.6s ease-out;
+  background: #335179;
+  transition: opacity 0.5s ease-out;
+  opacity: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
+#preloader.fade-out {
+  opacity: 0; /* Torna invisível */
+}
+
+#preloader-image {
+  max-width: 70%; /* Defina o tamanho máximo da imagem */
+  max-height: 70%;
+  /* Adicione outros estilos conforme necessário (e.g., animação) */
+}
+
+/* Remova o estilo da roda de carregamento */
 #preloader:before {
-  content: "";
-  position: fixed;
-  top: calc(50% - 30px);
-  left: calc(50% - 30px);
-  border: 6px solid #ffffff;
-  border-color: var(--accent-color) transparent var(--accent-color) transparent;
-  border-radius: 50%;
-  width: 60px;
-  height: 60px;
-  animation: animate-preloader 1.5s linear infinite;
+  content: none; /* Remove a roda */
+}
+
+@media (max-width: 768px) {
+  #preloader video {
+      max-width: 860px; /* Menor ainda em telas muito pequenas */
+      max-height: 860px;
+  }
 }
 
 @keyframes animate-preloader {
+  /* Pode remover este bloco inteiro */
   0% {
-    transform: rotate(0deg);
+      transform: rotate(0deg);
   }
-
   100% {
-    transform: rotate(360deg);
+      transform: rotate(360deg);
   }
 }
 
