--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -443,6 +443,16 @@ h6 {
   z-index: 10;
 }
 
+#preloader canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #335179;
+  z-index: 5; /* Fica atrás do vídeo */
+}
+
 /* Remova o estilo da roda de carregamento */
 #preloader:before {
   content: none; /* Remove a roda */
