--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -418,7 +418,7 @@ h6 {
   inset: 0;
   z-index: 999999;
   overflow: hidden;
-  background: rgb(53, 71, 97);
+  background: rgba(0, 0, 0, 0);
   transition: opacity 0.5s ease-out;
   opacity: 1;
   display: flex;
